update meta and update text content

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -76,7 +76,7 @@ main,
 }
 
 main {
-  margin: 100px 150px 200px;
+  margin: 100px 150px 255px;
   height: 100%;
 }
 
@@ -352,7 +352,7 @@ main {
 }
 
 .flow-content .item:hover .content-hover {
-  height: calc(100% + 82px);
+  height: calc(100% + 140px);
   opacity: 1;
   visibility: visible;
 }
@@ -433,7 +433,7 @@ main {
   transition: display 0.3s linear, visibility 0.3s linear, opacity 0.3s linear;
 }
 
-footer .container {
+.footer .container {
   padding: 21px 0;
   margin: 0 150px;
 }
@@ -466,7 +466,7 @@ footer .container {
   line-height: 30px;
   text-transform: uppercase;
   position: relative;
-  width: 78%;
+  width: 80%;
 }
 
 .footer-left .text .link {
